extend user model
