# docs/swagger.json
@@ -69,7 +69,7 @@
                 }
             }
         },
-        "/auth/register": {
+        "/auth/registration": {
             "post": {
                 "description": "Register a new user by providing a username and password.",
                 "consumes": [
@@ -85,7 +85,7 @@
                 "parameters": [
                     {
                         "description": "Register Input",
-                        "name": "registerInput",
+                        "name": "RegisterInput",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -179,10 +179,14 @@
         "controller.RegisterInput": {
             "type": "object",
             "required": [
+                "email",
                 "password",
                 "username"
             ],
             "properties": {
+                "email": {
+                    "type": "string"
+                },
                 "password": {
                     "type": "string"
                 },
